--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
